# spitrance

./: .gitignore  CMakeLists.txt  README.md  main.c  make.sh  setup_cmake.sh  spitrance
build-setup/: armhf.cmake
src/: CMakeLists.txt  ledstrip.cpp  ledstrip.h  main.cpp  someclass.cpp  someclass.h  spidevice.cpp  spidevice.h
src/FastLED/: CMakeLists.txt  lib8tion.h  pixeltypes.h
src/patterns/: CMakeLists.txt
src/patterns/sparks/: CMakeLists.txt  sparkspattern.cpp  sparkspattern.h
